error exit 	modified:   .vscode/settings.json 	modified:   README.md 	modified:   build/Testing/Temporary/LastTest.log 	modified:   include/aruco_slam/aruco_slam.h 	modified:   src/aruco_slam.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,5 +71,9 @@
         "*.ipp": "cpp",
         "forward_list": "cpp",
         "core": "cpp"
-    }
+    },
+    "python.analysis.extraPaths": [
+        "/home/liangyichen/catkin_ws/devel/lib/python2.7/dist-packages",
+        "/opt/ros/melodic/lib/python2.7/dist-packages"
+    ]
 }
